@startuml Template

class AbstractClass{
    + ~AbstractClass() : virtual
    + TemplateMethod()
    --
    # PrimitiveOperation1() : virtual void
    # PrimitiveOperation2() : virtual void
    # AbstractClass()
}

class ConcreteClass1{
    + ConcreteClass1()
    + ~ConcreteClass1()
    --
    # PrimitiveOperation1() : void
    # PrimitiveOperation2() : void
}

class ConcreteClass2{
    + ConcreteClass2()
    + ~ConcreteClass2()
    --
    # PrimitiveOperation1() : void
    # PrimitiveOperation2() : void
}

ConcreteClass1 -up-|> AbstractClass
ConcreteClass2 -up-|> AbstractClass

@enduml